--- a/pages/ranking/ranking.wxss
+++ b/pages/ranking/ranking.wxss
@@ -46,6 +46,7 @@
 }
 
 .list {
+  position: relative;
   margin-top: 33rpx;
   width: 666rpx;
   height: 818rpx;
@@ -53,6 +54,9 @@
 }
 
 .list-header {
+  position: absolute;
+  left: 0;
+  top: 0;
   display: flex;
   height: 69rpx;
   width: 100%;
@@ -68,7 +72,10 @@
   font-weight: bold;
   color: rgba(51,51,51,1);
 }
-
+.list-view {
+  height: 100%;
+  width: 100%;
+}
 .list-item {
   display: flex;
   align-items: center;
