--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -406,3 +406,141 @@ button[plain] {
   width: 258rpx;
   height: 97rpx;
 }
+
+
+.about {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.about-container {
+  position: relative;
+  margin: 320rpx auto;
+  width: 576rpx;
+  height: 470rpx;
+  box-sizing: border-box;
+}
+
+.about-bg {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 4;
+}
+
+.about-title {
+  position: absolute;
+  top: -30%;
+  left: 50%;
+  transform: translate3d(-50%, 0, 0);
+  width: 216rpx;
+  height: 223rpx;
+  z-index: 6;
+}
+
+.fail-title {
+  position: absolute;
+  top: -8%;
+  left: 50%;
+  transform: translate3d(-50%, 0, 0);
+  width: 413rpx;
+  height: 82rpx;
+  z-index: 6;
+}
+
+.out_tips1 {
+  position: absolute;
+  top: 116rpx;
+  left: 50%;
+  transform: translate3d(-50%, 0, 0);
+  z-index: 5;
+  font-size: 20px;
+  font-family: PingFangSC-Regular;
+  font-weight: 400;
+  color: rgba(255,94,158,1);
+}
+
+.out_tips2 {
+  position: absolute;
+  top: 195rpx;
+  left: 50%;
+  transform: translate3d(-50%, 0, 0);
+  width: 100%;
+  z-index: 5;
+  font-family: PingFangSC-Regular;
+  font-weight: 400;
+  font-size: 15px;
+  color: rgba(252,255,1,1);
+  text-align: center;
+}
+
+.out_tips3 {
+  position: absolute;
+  top: 120rpx;
+  left: 50%;
+  transform: translate3d(-50%, 0, 0);
+  width: 280rpx;
+  z-index: 5;
+  font-family: PingFangSC-Regular;
+  font-weight: 400;
+  color: rgba(252,255,1,1);
+  text-align: center;
+  font-size: 20px;
+}
+
+.answer-wrap {
+  position: absolute;
+  top: 326rpx;
+  width: 100%;
+  z-index: 5;
+  text-align: center;
+}
+
+.right-btn {
+  width: 258rpx;
+  height: 97rpx;
+}
+
+.form-item {
+  position: absolute;
+  display: flex;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-left: 35rpx;
+  width: 480rpx;
+  height: 90rpx;
+  line-height: 90rpx;
+  background: rgba(255,255,255,1);
+  border: 1px solid rgba(255,255,255,1);
+  border-radius: 45rpx;
+  z-index: 5;
+  color: #5713B6FF;
+  font-size: 16px;
+  font-family: PingFangSC-Regular;
+  font-weight: 400;
+}
+
+.form-item text {
+  margin-right: 38rpx;
+  width: 150rpx;
+  text-align: justify;
+}
+
+.form-item text::after {
+  display: inline-block;
+  width: 100%;
+  content: '';
+  height: 0;
+}
+
+.form-item input {
+  flex: 1;
+  padding-right: 35rpx;
+  height: 90rpx;
+  line-height: 90rpx;
+}
