--- a/pages/regular/regular.wxml
+++ b/pages/regular/regular.wxml
@@ -21,16 +21,16 @@
       <image class="gold-icon" src="https://shiancha.guduokeji.com/lib/regular/gold.png"></image>{{ points }}
     </view>
     <image class="question-header" src="https://shiancha.guduokeji.com/lib/regular/header.png"></image>
-    <image class="question-container" src="https://shiancha.guduokeji.com/lib/regular/container.png"></image>
     <image class="question-logo" src="https://shiancha.guduokeji.com/lib/regular/logo.png"></image>
     <image class="question-blank" src="https://shiancha.guduokeji.com/lib/regular/blank.png"></image>
     <view class="quest-wrap">
+      <image class="question-container" src="https://shiancha.guduokeji.com/lib/regular/container.png"></image>
       <view class="quest-index">- 第 {{ questionCount }} 题 -</view>
       <view class="quest-desc">{{ question.title }}</view>
-      <view class="quest-item {{ selectedIndex === '1' ? 'active' : ''}}" bindtap="selected" data-index="1">A. {{ question.firstAnswer }}</view>
-      <view class="quest-item {{ selectedIndex === '2' ? 'active' : ''}}" bindtap="selected" data-index="2">B. {{ question.secondAnswer }}</view>
-      <view class="quest-item {{ selectedIndex === '3' ? 'active' : ''}}" bindtap="selected" data-index="3">C. {{ question.thirdAnswer }}</view>
-      <view class="quest-item {{ selectedIndex === '4' ? 'active' : ''}}" bindtap="selected" data-index="4">D. {{ question.fourthAnswer }}</view>
+      <view class="quest-item {{ selectedIndex === '1' ? 'active' : ''}}" bindtap="selected" data-index="1"><text style="margin-right: 10rpx;">A.</text>{{ question.firstAnswer }}</view>
+      <view class="quest-item {{ selectedIndex === '2' ? 'active' : ''}}" bindtap="selected" data-index="2"><text style="margin-right: 10rpx;">B.</text>{{ question.secondAnswer }}</view>
+      <view class="quest-item {{ selectedIndex === '3' ? 'active' : ''}}" bindtap="selected" data-index="3"><text style="margin-right: 10rpx;">C.</text>{{ question.thirdAnswer }}</view>
+      <view class="quest-item {{ selectedIndex === '4' ? 'active' : ''}}" bindtap="selected" data-index="4"><text style="margin-right: 10rpx;">D.</text>{{ question.fourthAnswer }}</view>
     </view>
     <!-- 正确 -->
     <view class="about" wx:if="{{ showRight }}">
