--- a/pages/regular/regular.wxss
+++ b/pages/regular/regular.wxss
@@ -92,9 +92,11 @@
 
 .question-container {
   position: absolute;
-  top: 236rpx;
+  top: -28rpx;
+  left: 50%;
+  transform: translate3d(-50%, 0, 0);
   width: 690rpx;
-  height: 847rpx;
+  height: 100%;
   z-index: -1;
 }
 
@@ -116,8 +118,9 @@
 }
 
 .quest-wrap {
+  position: relative;
   margin-top: 265rpx;
-  padding: 0 80rpx;
+  padding: 0 80rpx 80rpx;
   font-family: SourceHanSansCN-Regular;
   color: #fff;
 }
@@ -137,14 +140,15 @@
 }
 
 .quest-item {
-  margin-top: 50rpx;
+  margin-top: 38rpx;
   padding-left: 31rpx;
   width: 600rpx;
-  height: 76rpx;
+  /* height: 76rpx; */
   line-height: 76rpx;
   border: 1px solid rgba(255,255,255,1);
   border-radius: 38rpx;
   box-sizing: border-box;
+  word-wrap: break-word;
 }
 
 .quest-item.active {
