--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -255,6 +255,8 @@
   position: absolute;
   left: 61rpx;
   right: 61rpx;
+  width: 520rpx;
+  height: 200rpx;
   font-size: 14px;
   font-family: PingFangSC-Regular;
   font-weight: 400;
@@ -316,8 +318,8 @@
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
   z-index: 6;
-  height: 179rpx;
-  width: 235rpx;
+  /* height: 179rpx;
+  width: 235rpx; */
 }
 
 .treasure-tip {
