--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -83,8 +83,7 @@
     <view class="contest-container">
       <image class="contest-bg" src="https://shiancha.guduokeji.com/lib/home/contest_bg.png" alt=""></image>
       <image class="contest-title" src="https://shiancha.guduokeji.com/lib/home/contest_title.png" alt=""></image>
-      <text class="rules-desc" style="top: 198rpx; left: 181rpx; right: 148rpx; color: rgba(3,0,119,1);">{{ heroTip }}</text>
-      <!-- <text class="rules-desc" style="top: 198rpx; left: 181rpx; right: 148rpx; color: rgba(3,0,119,1);">由于你的优异表现，获得一张英雄帖，持此贴可以在6月25-6月26日参加高手云集的专场赛</text> -->
+      <text class="post-desc" style="top: 198rpx; left: 181rpx; right: 148rpx; color: rgba(3,0,119,1);">{{ heroTip }}</text>
       <image class="rules-go" src="https://shiancha.guduokeji.com/lib/home/rules_go.png" alt="" bindtap="goFeature"></image>
       <image class="about-cancel" src="https://shiancha.guduokeji.com/lib/home/about_cancel.png" alt="" bindtap="hiddenContest"></image>
     </view>
@@ -128,7 +127,7 @@
     <view class="gift-container" style='margin-top: 279rpx; height: 776rpx;'>
       <image class="gift-bg" src="https://shiancha.guduokeji.com/lib/award/award_pop_bg.png" alt=""></image>
       <image class="gift-title" src="https://shiancha.guduokeji.com/lib/award/award_success.png" style='top: -19%'></image>
-      <view class='out_tips3'>恭喜获得专题赛神秘奖品</view>
+      <view class='out_tips3'>恭喜获得专场赛神秘奖品</view>
       <view class='form-item' style='top: 256rpx;'>
         <text>姓名</text><input bindinput="inputName" />
       </view>
